<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello, world!</string>
    <string name="resID">0382835f8bf042f1975dcb1e24aa294c</string>
    <string name="context">正</string>
    <string name="cexit">Go home?</string>
    <string name="econfirm">Yes</string>
    <string name="findcontext">止</string>
    <string name="result">Results </string>
    <string name="exit">Exit</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="again">Next!</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="gtofind"> -> </string>
    <string name="timeleft">Time Left: </string>
    <string name="time">Time</string>
    <string name="score">Score: </string>
    <string name="level">Level: </string>
    <string name="text">Text</string>
    <string name="graphic">Graphic</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="free">Free</string>
    <string name="back">Back</string>
    <string name="apply">Apply</string>
    <string name="musicon">Music: ON</string>
    <string name="musicoff">Music: OFF</string>
    <string name="soundon">Sound: ON</string>
    <string name="soundoff">Sound: OFF</string>
    <string name="freetime">Monley\'s Number</string>
    <string name="feedback">Connect Teacher!</string>
    <string name="ch_back">Back</string>
    <string name="share">Share</string>
    <string name="ac_graphic">Switch</string>
    <string name="ac_music">Egg</string>
    <string name="ac_unlock">Level</string>
    <string name="ac_pass">Pass!</string>
    <string name="ac_lost">Fail!</string>
    <string name="ac_homescreen">Widget</string>
    <string name="ac_keyguard">Keyguard</string>
    <string name="ac_about">Contact</string>
    <string name="eac_graphic">First time switching to Graphics Mode</string>
    <string name="eac_music">Easter egg found in Mode Select Menu</string>
    <string name="eac_unlock">Find ways to temporarily unlock All Levels</string>
    <string name="eac_pass">Quick Pass!</string>
    <string name="eac_lost">Quick Fail!</string>
    <string name="eac_homescreen">First time creating a HomeScreen Widget</string>
    <string name="eac_keyguard">First time creating a Keyguard Widget!</string>
    <string name="eac_about">Find out how to connect with Teacher Giraffe!</string>
    <string name="eac_developer">DEVELOPER MODE ENABLED. ALL LEVEL UNLOCKED.</string>
    <string name="dev_resizeInfo">DEVELOPER: RESIZE INFO ENABLERD: </string>
    <string name="credit">Coding: Yun Hsiao Wu\nGraphic Design: Jia Hui Yu\n\nContact Teacher Giraffe: \nsdufe.dmt.findme@gmail.com\n\nShandong University of\nFinance and Economics</string>
    <string name="graphicdes">Graphic Mode Item</string>
    <string name="fr_time">Time: </string>
    <string name="fr_hTime">Time Limit</string>
    <string name="fr_size">Size: </string>
    <string name="fr_hSize">×</string>
    <string name="fr_hWidth">Width</string>
    <string name="fr_hHeight">Height</string>
    <string name="fr_content">Default Content</string>
    <string name="fr_find">Find</string>
    <string name="fr_hTrue">我</string>
    <string name="fr_in"> in </string>
    <string name="fr_hFalse">找</string>
    <string name="fr_start">Start!</string>
    <string name="efr_width"> mode width should no bigger than </string>
    <string name="efr_height"> mode height should no bigger than </string>
    <string name="efr_time">Time limits no more than</string>
    <string name="efr_fill">Please fill all the customization information or choose default~</string>
    <string name="efr_content"> mode content limited to a single character</string>
    <string name="stat_achieve">Stat &amp; Achieves</string>
    <string name="source"> from birds\' observation</string>
    <string name="st_text">Text</string>
    <string name="st_graphics">Graphics</string>
    <string name="st_level">Level: </string>
    <string name="st_fail">Failed: </string>
    <string name="st_fast">Record: </string>
    <string name="st_slow">/</string>
    <string name="st_times">Clicks: </string>
    <string name="st_pass">Passed: </string>
    <string name="est_level">Mode Unlocked Level Count</string>
    <string name="est_fail">Mode Failed Level Count</string>
    <string name="est_fast">Mode Fastest Record: </string>
    <string name="est_times">Mode Least Clicks: </string>
    <string name="est_times2">Mode Most Clicks: </string>
    <string name="est_slow">Mode Slowest Record: </string>
    <string name="est_pass">Mode Passed Level Count</string>
    <string name="est_enter">Tap again to start this level</string>
    <string name="est_play">You haven\'t played this mode before, go and try it~</string>
    <string name="share_title">Findme Achievements</string>
    <string name="cheat">When game starts, click four corner items clockwise, then hit pause to pass current level.</string>
    <string name="share_text">I got excellent grades in Findme, why don\'t you come and join us!</string>
    <string name="tip01">Teacher Giraffe has three students: Monley, Panfa, Rannit. They have to grow to Monkey, Panda and Rabbit to Graduate.</string>
    <string name="tip02">To run the school, Teacher Giraffe have to put some ads in clever places, they said its harmless. :)</string>
    <string name="tip03">Lock screen widget can be added on Android 4.2+, Findme widget works awesome there. :P</string>
    <string name="tip04">Teacher Giraffe shut down his head router every time he go to classroom, which makes Panfa very depressed.</string>
    <string name="tip05">When Select Mode you may find it can form a combination with left and right button…</string>
    <string name="tip06">Monley\'s doing well because he\'s clever? or… he can alter his Homework!</string>
    <string name="tip07">It is a tradition in game industry that there should be an easter egg in Level Select Screen, yes, tradition!</string>
    <string name="tip08">Why there are three birds stand on blackboard in main menu? What a strange idea.</string>
    <string name="tip09">Panfa\'s nature: The time is short whatever he do, ESPECIALLY when sleeping.</string>
    <string name="tip10">You need to break the former time record to update clicks record. You\'re welcome. xD</string>
    <string name="tip11">Already got dizzy in a particular level? try the four characters in corner with pause button following. It\'s AMAZING!</string>
    <string name="tip12">Finding yourself saw something important in last tip, but missed it? I\'ll just say 19 is a magical number for monley.</string>
    <string name="tip13">Rannit knows that Panfa likes her. She tries to help Panfa pass his homework but well… at least Panfa\'s happy. For a while.</string>
    <string name="tip14">As a sandbox game, Monley\'s free mode can neither unlock new level nor update records.</string>
    <string name="tip15">There\'s a saying that when you can\'t find the right character, different looking angle will surprise you!</string>
    <string name="tip16">There\'s an epic portal on the upper-left corner of Main Menu can let you connect with Teacher Giraffe and HE WILL REPLY!</string>
    <string name="tip17">Find it\'s difficult to understand Stat &amp; Achieves? Did I tell you they\'re clickable?</string>
    <string name="tip18">It\'s different between texts in Widget and game levels. Go try it out!</string>
    <string name="tip19">Don\'t be addicted to Quick Pass even if it\'s awesome!</string>
    <string name="findme_widget_f">干大子王丐太日氏乌凤札戊生付卮瓜匆戌仲华囟肋玖戒壳认束忐愛旷虹我体余游免肓旮间忸盂凹拔抨刺匍昂咋鸣傀盲治治祉左祈承驾珅拴抽要昜胃皈待叮很盆亮闻洗莲袄怒茝荼莞峽均钱秣倏徒狼衰衰恣恙窈舂琉捧壸婪梗衬硃勖崇崛梨笱笞偕毫竟妯涯梁悵揠揚揪棲敞棠晴暑喙铺锒街童惺鸳窘皴瑗肆姊搞幕蚂稜催溶粱榖榖摺骆蔸閣暧踉瘌葡竭齊鄰歉屢撕樓殤賬賭滕頦潟聱樸瞠篡儒邀辨辩擠藉檔檄瞭嬰覆璧藺簿鏗羸響攝矓夔巒麟纖</string>
    <string name="findme_widget_t">千六孑玉丏大曰氐鸟风扎戉玍伏厄爪勿戍忡毕囪肪玫戎亮识柬忑爱矿红找休佘戏兔盲旯问扭盃凸拨拌剌匐昴昨呜儡肓冶冶趾右祁丞驽坤栓插耍易胄皎侍咛狠盒壳闸冼蓬祆恕苣茶筦狹匀我秩倐徙狠衷哀姿恚窕春疏棒壶焚埂衫殊勛祟掘犁筍笤階亳竞娌捱粱倀堰楊愀悽敝裳睛署啄辅银衔重腥鸯窟皸瑷肄妹槁暮蚁陵摧熔梁殼縠褶驼篼閤暖跟癞萄謁儕粼歎履撒摟觴賑睹腾劾瀉聲撲膛纂孺遨辦辨劑籍擋儌嘹罌覈壁蘭薄慳赢嚮懾嚨夒蠻鱗讖</string>

</resources>
