<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_achievements">

    <RelativeLayout
        android:id="@+id/s_a_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

    <LinearLayout
        android:id="@+id/s_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        style="@style/s_a">

        <TextView
            android:id="@+id/stat_achieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/stat"
            android:text="@string/stat_achieve"
            android:textColor="@color/holo_normal" />

        <TextView
            android:id="@+id/statSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            style="@style/statSource"
            android:text="@string/source"
            android:textColor="@color/holo_normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/s_a"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/st_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/stat"
                android:text="@string/st_text"
                android:textColor="@color/holo_normal" />

            <TextView
                android:id="@+id/st_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/stats"
                android:text="@string/st_level"
                android:textColor="@color/holo_normal" />

            <TextView
                android:id="@+id/st_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/stats"
                android:text="@string/st_fail"
                android:textColor="@color/holo_normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/st_fast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/stats"
                    android:text="@string/st_fast"
                    android:textColor="@color/holo_normal" />

                <TextView
                    android:id="@+id/st_slow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/stats"
                    android:text="@string/st_slow"
                    android:textColor="@color/holo_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/st_least"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/stats"
                    android:text="@string/st_times"
                    android:textColor="@color/holo_normal" />

                <TextView
                    android:id="@+id/st_most"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/stats"
                    android:text="@string/st_slow"
                    android:textColor="@color/holo_normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/st_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/stats"
                android:text="@string/st_pass"
                android:textColor="@color/holo_normal" />
        
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/st_graphics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/stat"
                android:text="@string/st_graphics"
                android:textColor="@color/holo_normal" />

            <TextView
                android:id="@+id/st_glevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/stats"
                android:text="@string/st_level"
                android:textColor="@color/holo_normal" />

            <TextView
                android:id="@+id/st_gfail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/stats"
                android:text="@string/st_fail"
                android:textColor="@color/holo_normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/st_gfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/stats"
                    android:text="@string/st_fast"
                    android:textColor="@color/holo_normal" />

                <TextView
                    android:id="@+id/st_gslow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/stats"
                    android:text="@string/st_slow"
                    android:textColor="@color/holo_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/st_gleast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/stats"
                    android:text="@string/st_times"
                    android:textColor="@color/holo_normal" />

                <TextView
                    android:id="@+id/st_gmost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/stats"
                    android:text="@string/st_slow"
                    android:textColor="@color/holo_normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/st_gpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/stats"
                android:text="@string/st_pass"
                android:textColor="@color/holo_normal" />
            
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/achievements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/statistics"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ac_graphic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/achieve"
                android:text="@string/ac_graphic"
                android:textColor="@color/black_overlay" />

            <TextView
                android:id="@+id/ac_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/achieve"
                android:text="@string/ac_music"
                android:textColor="@color/black_overlay" />

            <TextView
                android:id="@+id/ac_unlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/achieve"
                android:text="@string/ac_unlock"
                android:textColor="@color/black_overlay" />

            <TextView
                android:id="@+id/ac_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/achieve"
                android:text="@string/ac_about"
                android:textColor="@color/black_overlay" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ac_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/achieve"
                android:text="@string/ac_pass"
                android:textColor="@color/black_overlay" />

            <TextView
                android:id="@+id/ac_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/achieve"
                android:text="@string/ac_lost"
                android:textColor="@color/black_overlay" />

            <TextView
                android:id="@+id/ac_homescreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/achieve"
                android:text="@string/ac_homescreen"
                android:textColor="@color/black_overlay" />

            <TextView
                android:id="@+id/ac_keyguard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/achieve"
                android:text="@string/ac_keyguard"
                android:textColor="@color/black_overlay" />

        </LinearLayout>

    </LinearLayout>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/acrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TextView
            android:id="@+id/actv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="130dp"
            style="@style/share"/>

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actv"
            android:text="@string/share" />

        <TextView
            android:id="@+id/actv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/acback"
            android:layout_toRightOf="@+id/acback"
            android:width="100dp"
            android:height="40dp" />

        <Button
            android:id="@+id/acback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/share"
            android:layout_alignBottom="@+id/share"
            android:layout_marginLeft="10dp"
            android:text="@string/ch_back" />

    </RelativeLayout>

</RelativeLayout>